--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
     "openpyxl (>=3.1.5,<4.0.0)",
     "python-dotenv (>=1.2.1,<2.0.0)",
-    "django-filter (>=25.2,<26.0)"
+    "django-filter (>=25.2,<26.0)",
+    "django-simple-history (>=3.10.1,<4.0.0)"
 ]
 
 
