feat(productos): Implementar filtrado avanzado por rol
Se añade el sistema de filtrado dinámico para el modelo Producto.
Se crean ProductoBaseFilter y ProductoGerenteFilter para separar los filtros generales de los de auditoría.
Se actualiza ProductoViewSet para usar get_filterset_class y aplicar los filtros según el rol del usuario.
Se mejora la acción 'papelera' para permitir filtrado.
Se corrige la clase IsGerente para incluir a los superusuarios.

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ poetry.lock # Usually committed, but user has it in root, so including for now
 
 # Session summary
 resumen_sesion_2025-11-06.txt
+contexto_sesion.txt
+pasos_faltantes.txt
