--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
     "openpyxl (>=3.1.5,<4.0.0)",
     "python-dotenv (>=1.2.1,<2.0.0)",
     "django-filter (>=25.2,<26.0)",
-    "django-simple-history (>=3.10.1,<4.0.0)"
+    "django-simple-history (>=3.10.1,<4.0.0)",
+    "drf-spectacular (>=0.29.0,<0.30.0)"
 ]
 
 
