--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,9 @@ dependencies = [
     "python-dotenv (>=1.2.1,<2.0.0)",
     "django-filter (>=25.2,<26.0)",
     "django-simple-history (>=3.10.1,<4.0.0)",
-    "drf-spectacular (>=0.29.0,<0.30.0)"
+    "drf-spectacular (>=0.29.0,<0.30.0)",
+    "pandas (>=2.3.3,<3.0.0)",
+    "word2number-es (>=1.0.1,<2.0.0)",
 ]
 
 
