feat: Implementar manejador de excepciones personalizado y script de siembra de datos
- Implementado un manejador de excepciones DRF personalizado para respuestas de error de API estandarizadas.
- Creado un comando de gestión de Django () para poblar la base de datos con datos de prueba realistas, incluyendo escenarios de borrado suave y restauración.
- Corregida la lógica de la señal  para gestionar correctamente el stock del producto al eliminar una compra.
- Actualizadas las pruebas existentes para alinearse con el formato de respuesta del nuevo manejador de excepciones personalizado.
- Añadido  como dependencia de desarrollo para la generación de datos.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,5 +29,6 @@ build-backend = "poetry.core.masonry.api"
 [dependency-groups]
 dev = [
     "black (>=25.9.0,<26.0.0)",
-    "ruff (>=0.14.3,<0.15.0)"
+    "ruff (>=0.14.3,<0.15.0)",
+    "faker (>=38.0.0,<39.0.0)"
 ]
