feat(docker): Implementar Dockerización con usuario no-root y configuración de DB
Este commit introduce la dockerización completa del proyecto para facilitar el desarrollo y despliegue.

Cambios principales:
- Se añade  para excluir archivos innecesarios de las imágenes Docker.
- Se crea  para construir la imagen de la aplicación Django, incluyendo:
    - Configuración de un usuario  () para mejorar la seguridad.
    - Instalación de dependencias con Poetry.
    - Uso de  como servidor WSGI por defecto.
- Se crea  para orquestar los servicios  (Django) y  (PostgreSQL), configurado para desarrollo con hot-reloading.
- Se modifica  para utilizar  (con ) para la configuración de la base de datos, priorizando variables de entorno.
- Se añaden  y  a .

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ dependencies = [
     "drf-spectacular (>=0.29.0,<0.30.0)",
     "pandas (>=2.3.3,<3.0.0)",
     "word2number-es (>=1.0.1,<2.0.0)",
+    "gunicorn (>=22.0.0,<23.0.0)",
+    "dj-database-url (>=2.1.0,<3.0.0)",
 ]
 
 
