--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,39 +1,45 @@
-[project]
+[tool.poetry]
 name = "reportes-automatizados"
 version = "0.1.0"
 description = ""
-authors = [
-    {name = "rayrivas950",email = "rayrivas950@gmail.com"}
-]
+authors = ["rayrivas950 <rayrivas950@gmail.com>"]
 readme = "README.md"
-requires-python = ">=3.12"
-dependencies = [
-    "django (>=5.2.8,<6.0.0)",
-    "djangorestframework (>=3.16.1,<4.0.0)",
-    "psycopg2-binary (>=2.9.11,<3.0.0)",
-    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
-    "openpyxl (>=3.1.5,<4.0.0)",
-    "python-dotenv (>=1.2.1,<2.0.0)",
-    "django-filter (>=25.2,<26.0)",
-    "django-simple-history (>=3.10.1,<4.0.0)",
-    "drf-spectacular (>=0.29.0,<0.30.0)",
-    "pandas (>=2.3.3,<3.0.0)",
-    "word2number-es (>=1.0.1,<2.0.0)",
-    "gunicorn (>=22.0.0,<23.0.0)",
-    "dj-database-url (>=2.1.0,<3.0.0)",
+packages = [
+    { include = "crud_app" }
 ]
 
+[tool.poetry.dependencies]
+python = ">=3.12"
+django = ">=5.2.8,<6.0.0"
+djangorestframework = ">=3.16.1,<4.0.0"
+psycopg2-binary = ">=2.9.11,<3.0.0"
+djangorestframework-simplejwt = ">=5.5.1,<6.0.0"
+openpyxl = ">=3.1.5,<4.0.0"
+python-dotenv = ">=1.2.1,<2.0.0"
+django-filter = ">=25.2,<26.0"
+django-simple-history = ">=3.10.1,<4.0.0"
+drf-spectacular = ">=0.29.0,<0.30.0"
+pandas = ">=2.3.3,<3.0.0"
+word2number-es = ">=1.0.1,<2.0.0"
+gunicorn = ">=22.0.0,<23.0.0"
+dj-database-url = ">=2.1.0,<3.0.0"
+
+[tool.poetry.group.dev.dependencies]
+black = ">=25.9.0,<26.0.0"
+ruff = ">=0.14.3,<0.15.0"
+faker = ">=38.0.0,<39.0.0"
+pytest = ">=9.0.1,<10.0.0"
+pytest-cov = ">=7.0.0,<8.0.0"
+pytest-django = ">=4.11.1,<5.0.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
 
-[dependency-groups]
-dev = [
-    "black (>=25.9.0,<26.0.0)",
-    "ruff (>=0.14.3,<0.15.0)",
-    "faker (>=38.0.0,<39.0.0)"
+[tool.pytest.ini_options]
+DJANGO_SETTINGS_MODULE = "config.settings"
+python_files = "tests.py test_*.py *_tests.py"
+addopts = [
+    "--cov=.",
+    "--cov-report=term-missing",
 ]
-
-[[tool.poetry.packages]]
-include = "crud_app"
