feat: Implementar CORS y mejorar entorno Docker
Se implementa la configuración de CORS para permitir la comunicación con el frontend de Angular.

Además, se realizan varias mejoras y correcciones en el entorno de desarrollo de Docker para solucionar problemas de permisos y mejorar la experiencia del desarrollador.

Cambios principales:

- **CORS:**
  - Se añade `django-cors-headers` a las dependencias.
  - Se configura el middleware y `CORS_ALLOWED_ORIGINS` en `settings.py` para permitir peticiones desde `localhost:4200`.

- **Entorno Docker:**
  - Se modifica el `Dockerfile` para aceptar el UID y GID del host como argumentos de construcción.
  - Se actualiza `docker-compose.yml` para pasar dinámicamente el UID/GID del usuario, solucionando problemas de permisos con los volúmenes montados.
  - Se añade `.cache/` a `.dockerignore` para evitar que la caché de Poetry se incluya en el contexto de construcción.

- **Correcciones:**
  - Se corrige un `TypeError` en `serializers_reconciliation.py` cambiando la definición de `read_only_fields` a una lista vacía, lo que permite la correcta generación del esquema de la API.
  - Se ajusta `.gitignore` para rastrear `poetry.lock` y excluir artefactos de compilación como `.coverage`.

--- a/.gitignore
+++ b/.gitignore
@@ -9,12 +9,14 @@ __pycache__/
 .venv
 env/
 venv/
+.local/
 
 # Django stuff:
 *.log
 *.sqlite3
 db.sqlite3
 /logs/
+.coverage
 
 # Media files
 media/
@@ -28,7 +30,6 @@ static/
 
 # Poetry
 .poetry/
-poetry.lock # Usually committed, but user has it in root, so including for now
 
 # Session summary
 resumen_sesion_2025-11-06.txt
